--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     name: Run tests
     runs-on: ${{ matrix.os }}
+    env:
+      # tell aws-lc-sys to compile nasm
+      AWS_LC_SYS_PREBUILT_NASM: 1
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -41,7 +44,6 @@ jobs:
   all-features-windows:
     runs-on: windows-latest
     env:
-      # tell aws-lc-sys to compile nasm
       AWS_LC_SYS_PREBUILT_NASM: 1
     steps:
       - name: Checkout code
