--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -16,6 +16,7 @@ rooibos-xterm-js = { path = "../rooibos-xterm-js", optional = true }
 rooibos-router = { path = "../rooibos-router", optional = true }
 rooibos-keybind = { path = "../rooibos-keybind", optional = true }
 ratatui = { workspace = true, default-features = false }
+tui-theme = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
