--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -42,6 +42,7 @@ shlex = { workspace = true }
 color-eyre = { workspace = true }
 ratatui = { workspace = true, features = ["palette"] }
 terminput-crossterm = { workspace = true }
+async-signal = { workspace = true }
 
 [dev-dependencies]
 insta = { workspace = true }
