--- a/crates/rooibos-config/Cargo.toml
+++ b/crates/rooibos-config/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2024"
 watch-config = { workspace = true }
 reactive_graph = { workspace = true, features = ["tracing", "effects"] }
 rooibos-runtime = { workspace = true }
-futures-cancel = { workspace = true }
+tokio-util = { workspace = true }
+tokio = { workspace = true }
 
 [features]
 schematic = ["watch-config/schematic"]
