--- a/crates/rooibos-keybind/Cargo.toml
+++ b/crates/rooibos-keybind/Cargo.toml
@@ -21,7 +21,7 @@ clap_complete = { workspace = true, features = [
   "unstable-dynamic",
 ], optional = true }
 unicode-width = { workspace = true }
-terminput-crossterm = { workspace = true }
+terminput-crossterm = { workspace = true, features = ["crossterm_0_28"] }
 
 [features]
 runtime = ["rooibos-runtime"]
