--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -40,7 +40,7 @@ tracing-appender = { workspace = true }
 shlex = { workspace = true }
 color-eyre = { workspace = true }
 ratatui = { workspace = true, features = ["palette"] }
-terminput-crossterm = { workspace = true }
+terminput-crossterm = { workspace = true, features = ["crossterm_0_28"] }
 async-signal = { workspace = true }
 
 [dev-dependencies]
