--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,12 +68,12 @@ slotmap = "1"
 bitflags = "2"
 futures = "0.3"
 rustc-hash = "2"
-terminput = "0.4.2"
-terminput-crossterm = "0.1.2"
-terminput-termion = "0.1.2"
-terminput-termwiz = "0.1"
+terminput = "0.5.4"
+terminput-crossterm = { version = "0.4", default-features = false }
+terminput-termion = "0.3"
+terminput-termwiz = { version = "0.4", default-features = false }
 paste = "1"
-taffy = "0.8.0"
+taffy = "0.9.0"
 thiserror = "2"
 textwrap = "0.16.2"
 unicode-width = "0.2.0"
