--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -30,7 +30,7 @@ tui-theme = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["rt", "macros", "sync"] }
-terminput-crossterm = { workspace = true }
+terminput-crossterm = { workspace = true, features = ["crossterm_0_28"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { workspace = true, features = ["enable-interning"] }
