--- a/crates/rooibos-terminal/Cargo.toml
+++ b/crates/rooibos-terminal/Cargo.toml
@@ -12,30 +12,15 @@ tokio = { workspace = true, default-features = false, features = [
   "rt",
 ] }
 rooibos-dom = { workspace = true }
-crossterm = { workspace = true, features = [
-  "event-stream",
-  "use-dev-tty",
-], optional = true }
 tracing = { workspace = true }
-termwiz = { workspace = true, optional = true }
-base64 = { workspace = true, optional = true }
 tokio-stream = { workspace = true, features = ["sync"] }
-terminput-crossterm = { workspace = true, optional = true, features = [
-  "crossterm_0_28",
-] }
-terminput-termion = { workspace = true, optional = true }
-terminput-termwiz = { workspace = true, optional = true, features = [
-  "termwiz_0_22",
-] }
+tokio-util = { workspace = true }
+stream-cancel = { workspace = true }
 
-[target.'cfg(unix)'.dependencies]
-termion = { workspace = true, optional = true }
-
-[target.'cfg(windows)'.dependencies]
-clipboard-win = { workspace = true, features = ["std"], optional = true }
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+terminput-termina = { workspace = true, optional = true }
+termina = { workspace = true, optional = true }
 
 [features]
-crossterm = ["dep:crossterm", "ratatui/crossterm", "terminput-crossterm"]
-termion = ["dep:termion", "ratatui/termion", "terminput-termion"]
-termwiz = ["dep:termwiz", "ratatui/termwiz", "terminput-termwiz"]
-clipboard = ["dep:base64", "clipboard-win"]
+termina = ["dep:termina", "dep:terminput-termina"]
+scrolling-regions = ["ratatui/scrolling-regions"]
