--- a/crates/rooibos-tester/Cargo.toml
+++ b/crates/rooibos-tester/Cargo.toml
@@ -11,6 +11,9 @@ tokio = { workspace = true, default-features = false, features = ["time"] }
 rooibos-dom = { workspace = true }
 rooibos-reactive = { workspace = true }
 unicode-width = { workspace = true }
+tokio-stream = { workspace = true }
+stream-cancel = { workspace = true }
+tokio-util = { workspace = true }
 
 [features]
 default = ["runtime"]
