--- a/crates/rooibos-web/Cargo.toml
+++ b/crates/rooibos-web/Cargo.toml
@@ -16,3 +16,5 @@ tap = { workspace = true }
 tokio-stream = { workspace = true, features = ["sync"] }
 terminput-web-sys = { workspace = true }
 wasm-compat = { workspace = true }
+stream-cancel = { workspace = true }
+tokio-util = { workspace = true }
