--- a/crates/rooibos-terminal/Cargo.toml
+++ b/crates/rooibos-terminal/Cargo.toml
@@ -20,6 +20,7 @@ stream-cancel = { workspace = true }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 terminput-termina = { workspace = true, optional = true }
 termina = { workspace = true, optional = true }
+tui-theme = { workspace = true }
 
 [features]
 termina = ["dep:termina", "dep:terminput-termina"]
