spawner improvements, ssh fixes, better theme integration

--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -16,6 +16,7 @@ background-service = { workspace = true }
 thiserror = { workspace = true }
 rooibos-terminal = { workspace = true }
 proc-exit = { workspace = true }
+tui-theme = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { workspace = true, default-features = false, features = [
