--- a/crates/rooibos-tester/Cargo.toml
+++ b/crates/rooibos-tester/Cargo.toml
@@ -14,6 +14,7 @@ unicode-width = { workspace = true }
 tokio-stream = { workspace = true }
 stream-cancel = { workspace = true }
 tokio-util = { workspace = true }
+tui-theme = { workspace = true }
 
 [features]
 default = ["runtime"]
