--- a/crates/rooibos-terminal/Cargo.toml
+++ b/crates/rooibos-terminal/Cargo.toml
@@ -16,7 +16,7 @@ tracing = { workspace = true }
 tokio-stream = { workspace = true, features = ["sync"] }
 tokio-util = { workspace = true }
 stream-cancel = { workspace = true }
-tui-theme = { workspace = true }
+tui-theme = { workspace = true, features = ["dcs-detect", "terminfo"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 terminput-termina = { workspace = true, optional = true }
