--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -9,8 +9,9 @@ either_of = { workspace = true }
 tui-textarea = { workspace = true, default-features = false, features = [
   "ratatui",
 ], optional = true }
-rooibos-dom = { path = "../rooibos-dom" }
-rooibos-reactive = { path = "../rooibos-reactive" }
+rooibos-dom = { workspace = true }
+rooibos-reactive = { workspace = true }
+rooibos-component-macros = { workspace = true }
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
   "all",
 ] }
