--- a/crates/rooibos-reactive/Cargo.toml
+++ b/crates/rooibos-reactive/Cargo.toml
@@ -29,7 +29,7 @@ paste = { workspace = true }
 wasm-compat = { workspace = true, features = ["all"] }
 taffy = { workspace = true }
 tracing = { workspace = true }
-tui-theme = { workspace = true }
+rooibos-theme = { workspace = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 any_spawner = { workspace = true, features = ["tokio", "tracing"] }
