--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -12,11 +12,11 @@ rooibos-config = { workspace = true, optional = true }
 rooibos-tester = { workspace = true, optional = true }
 rooibos-terminal = { workspace = true }
 rooibos-ssh = { workspace = true, optional = true }
-rooibos-web = { path = "../rooibos-web", optional = true }
-rooibos-router = { path = "../rooibos-router", optional = true }
-rooibos-keybind = { path = "../rooibos-keybind", optional = true }
+rooibos-web = { workspace = true, optional = true }
+rooibos-router = { workspace = true, optional = true }
+rooibos-keybind = { workspace = true, optional = true }
+rooibos-theme = { workspace = true }
 ratatui = { workspace = true, default-features = false }
-tui-theme = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true }
