--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -17,6 +17,7 @@ thiserror = { workspace = true }
 rooibos-terminal = { workspace = true }
 proc-exit = { workspace = true }
 rooibos-theme = { workspace = true }
+rooibos-components = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { workspace = true, default-features = false, features = [
