--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -32,9 +32,7 @@ web = ["rooibos-web"]
 config = ["rooibos-config"]
 config-confique = ["rooibos-config/confique"]
 config-schematic = ["rooibos-config/schematic"]
-config-json = ["rooibos-config/json"]
-config-yaml = ["rooibos-config/yaml"]
-config-toml = ["rooibos-config/toml"]
+config-figment = ["rooibos-config/figment"]
 ssh = ["rooibos-ssh"]
 router = ["rooibos-router"]
 input-search = ["rooibos-components/input-search"]
