--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,6 +120,7 @@ open = "5"
 accesskit = "0.23"
 accesskit_winit = "0.31"
 uuid = "1"
+winit = "0.30"
 
 # examples/testing
 tracing-subscriber = "0.3.19"
